test/1.2/errors/T_EDMETH.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

/// WARNING WEXPERIMENTAL
trait x {
    /// ERROR EDMETH
    method m() { }
}

/// WARNING WEXPERIMENTAL
trait y {
    is x;
    /// ERROR EDMETH
    method m() default { }
    /// ERROR EDMETH
    method n() throws { }
}

port z {
    is y;
    /// ERROR EDMETH
    method n() { }
}

template a {
    method foo() default{}
}

template b {
    is a;
    /// ERROR EDMETH
    method foo() {}
}

template c {
    is b;
    /// ERROR EDMETH
    method foo() default {}
}

/// WARNING WEXPERIMENTAL
port x {
    is c;
}
